code/stable/template/SRS/HTML/Template_SRS.css
body {min-width: 400px; max-width: 1400px;}
.title {text-align: center;}
.author {text-align: center;}
.paragraph {text-align: justify;}
.cases {
  display: inline-block;
  vertical-align: middle;}
.case {
  float: right;
  padding-left: 1em;}
.cases > span {
  display: block;
  padding-top: 0.1em;
  padding-left: 0em;}
.casebr {
  display: inline-block;
  vertical-align: middle;
  margin: 0 0.2em 0.4ex;
  text-align: center;
  font-size: 500%;}
.caption {
  text-align: center;
  font-weight: bold;
  padding-bottom: 1%;
  line-height: 0;}
.fraction {
  display: inline-block;
  vertical-align: middle;
  margin: 0 0.2em 0.4ex;
  text-align: center;}
.fraction > span {
  display: block;
  padding-top: 0.15em;}
.fdn {border-top: thin solid black;}
.table {
  text-align: left;
  padding-left: 1%;
  width: 90%;
  margin-bottom: 2%;
  margin-top: 2%}
table, th, td {
  border-collapse: collapse;
  margin-left: auto;
  margin-right: auto;}
th, td {border: 1px solid black; padding: 0.5em;}
.defn-table {width: 75%; margin-top: 1%; margin-bottom: 1%;}
.tdefn th, .ddefn th, .gdefn th, .idefn th {width: 15%;}
.section {width: 80%; margin: 0 auto; text-align: left;}
.code {
  display: inline-block;
  text-align: left;
  font-family: Monaco, Consolas, "Andale Mono","DejaVu Sans Mono", monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  background: #faf8f0;}
.list {text-align: left;}
figure {
text-align: center;
font-weight: bold;
}
figure > img {
max-width: 100%;
}
.matrix {
  position: relative;
  display: inline-table;
  margin: 10px;
  vertical-align: middle;}
.matrix:before, .matrix:after {
  content: "";
  position: absolute;
  top: 0;
  border: 1px solid #000;
  width: 5px;
  height: 100%;}
.matrix:before {
  left: -5px;
  border-right: 0px;}
.matrix:after {
  right: -5px;
  border-left: 0px;}
.matrix td {
  padding: 5px;
  text-align: center;
  border: 0px;}
ul.hide-list-style {
  list-style-type: none;}
ul.hide-list-style-no-indent {
  list-style-type: none;
padding: 0;}
dl.reference-list {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 20px;
  align-items: start;}
dd {
  margin: 0;}

